# Rust_Zoom_Video

backend/: .gitignore  Cargo.toml
backend/src/: database.rs  handler.rs  helper.rs  main.rs  model.rs  token.rs
frontend/: package.json
frontend/src/: Api.js
frontend/src/components/: AddRoom.jsx  JoinRoom.jsx  Rooms.jsx
frontend/src/hooks/: useNotification.js  useZoom.js
